<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="name">NAME</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="toppings">TOPPINGS</string>
    <string name="quantity">QUANTITY</string>
    <string name="summary">SUMMARY</string>
    <string name="order">ORDER</string>
    <string name="total">Total = Rs. 0</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">App</string>
</resources>
